[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Boss.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/bosses/boss1.glb" type="PackedScene" id=2]
[ext_resource path="res://scenes/bosses/boss-path-2.tres" type="Curve3D" id=3]
[ext_resource path="res://scenes/effects/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/bosses/boss-path-3.tres" type="Curve3D" id=5]
[ext_resource path="res://scenes/bosses/boss-path-1.tres" type="Curve3D" id=6]
[ext_resource path="res://scenes/ui/HealthBar.tscn" type="PackedScene" id=7]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 2.2, 0.2, 1.6 )

[node name="Boss" type="Spatial" groups=[
"bosses",
]]
script = ExtResource( 1 )
paths = [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 5 ) ]

[node name="EnemyModel" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="EnemyModel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.149611 )
shape = SubResource( 3 )

[node name="Boss" parent="EnemyModel" instance=ExtResource( 2 )]

[node name="Cannon1" type="Spatial" parent="EnemyModel/Boss"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.7, 0, 1 )

[node name="Cannon2" type="Spatial" parent="EnemyModel/Boss"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.7, 0, 1 )

[node name="HealthBar" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="Explosions" type="Spatial" parent="."]

[node name="Explosion" parent="Explosions" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.651622, 0, -0.43538 )
visible = false

[node name="Explosion2" parent="Explosions" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.48035, 0, 0.506529 )
visible = false

[node name="Explosion3" parent="Explosions" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.940129, 0, 1.08793 )
visible = false

[node name="Explosion4" parent="Explosions" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.48586, 0, -1.26301 )
visible = false

[node name="Explosion5" parent="Explosions" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.96395, 0, -0.790433 )
visible = false

[node name="Explosion6" parent="Explosions" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.316319, 0, 1.36753 )
visible = false

[node name="Path" type="Path" parent="."]
curve = ExtResource( 6 )

[node name="PathFollow" type="PathFollow" parent="Path"]
transform = Transform( 0.958846, -0.000225698, 0.283925, 0.000226216, 1, 3.09662e-05, -0.283925, 3.45374e-05, 0.958846, 4.94155, 0.0503616, -0.0690211 )

[node name="LaserTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="exploded" from="Explosions/Explosion6" to="." method="cleanup_ship"]
[connection signal="timeout" from="LaserTimer" to="." method="fire_laser"]
